feat: add admin config management
